--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-ng-app="aterApp">
   <head>
-    <base href="/winix_v2/" />
+    <base href="/angularjs_default/" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Demo</title>
